# clicfg

./: Cargo.toml  README.md  clicfg-terminal.sh
src/: argvalidator.rs  cli.rs  commands.rs  envs.rs  errors.rs  help.rs  main.rs  projects.rs  s3.rs  utils.rs
