[package]
name = "clicfg"
version = "0.1.0"
authors = ["Cyril Cheneson <ccheneson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rusoto_core = "0.43.0"
rusoto_s3 = "0.43.0"
rusoto_credential = "0.43.0"
rusoto_sts = "0.43.0"
rusoto_mock = "0.43.0"
tokio = "0.2.21"
strum_macros = "0.18.0"
strum = "0.18.0"
futures = "=0.3.2"
futures-util = "=0.3.2"
futures-macro = "=0.3.2"
bytes = "0.5.3"
dirs = "2.0.2"
prettydiff = "0.3.1"
