[package]
name = "clicfg"
version = "0.1.0"
authors = ["Cyril Cheneson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.6"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_sts = "0.48.0"
rusoto_mock = "0.48.0"
tokio = "1.19.2"
strum_macros = "0.24.0"
strum = "0.24.0"
futures = "=0.3.21"
futures-util = "=0.3.21"
futures-macro = "=0.3.21"
bytes = "1.1.0"
dirs = "4.0.0"
prettydiff = "0.6.1"
